update to NLP page

--- a/notebooks/NLP_Final_Project.html
+++ b/notebooks/NLP_Final_Project.html
@@ -322,6 +322,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 
 </header>
 
+<p>For my Natural Language Processing course final project, my team chose to create a model that could generate code based on a user’s prompt. To do this, we used Google’s Colab and the Transformers library. Although the results weren’t perfect, we were happy with our ability to train the model and look forward to taking the next steps to improve our outcome.</p>
 <hr>
 <section id="anly-580-natural-language-processing" class="level3">
 <h3 class="anchored" data-anchor-id="anly-580-natural-language-processing">ANLY-580: Natural Language Processing</h3>
