update to 511 final

--- a/notebooks/final511.html
+++ b/notebooks/final511.html
@@ -83,7 +83,7 @@ ul.task-list li input[type="checkbox"] {
   <nav id="quarto-sidebar" class="sidebar collapse sidebar-navigation floating overflow-auto">
     <div class="pt-lg-2 mt-2 text-left sidebar-header">
     <div class="sidebar-title mb-0 py-0">
-      <a href="../">Eduardo Armenta G.</a> 
+      <a href="../">Eduardo Armenta G. Version 1.0</a> 
         <div class="sidebar-tools-main tools-wide">
     <a href="https://github.com/ModeEdna" title="" class="sidebar-tool px-1"><i class="bi bi-github"></i></a>
     <a href="https://www.linkedin.com/in/eduardo-armenta/" title="" class="sidebar-tool px-1"><i class="bi bi-linkedin"></i></a>
@@ -139,7 +139,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../notebooks/final580.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">NLP Final</span></a>
+  <a href="../notebooks/NLP_Final_Project.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">NLP Final Project</span></a>
   </div>
 </li>
       </ul>
@@ -215,6 +215,8 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
+<p>For my Data Science and Analytics course final project I had to create a website documenting a semester-long process of finding the best model to predict a topic of our choosing. I chose to predict which teams would make it out of the group stage in the World Cup. The whole point of the project was to introduce us to some of the “Hello World” predictive models (e.g.&nbsp;regression, Naïve Bayes, decision trees) and to teach us about data gathering, data cleaning, and visualizations.</p>
+<p>My best accuracy score was 65%, but I believe my success was limited by the data I was able to gather. I was aiming for an accuracy rate of 70%, so I consider it a minor success. Since the project itself is a website, I can’t include much of it on this page, so <a href="https://ea795.georgetown.domains/501-project-website/docs/notebooks/aboutMe.html">here</a> is a link to the page so you can learn more about it. Now that the semester is over, I can look back at the project and understand what can be improved. However, I am proud of the aesthetics and the page’s ease of understanding.</p>
 
 
 
